# groundlift

./: .clang-format  .clangd  .gitignore  .valgrindrc  CMakeLists.txt  LICENSE  Makefile  README.md  variables.mk
assets/icon/flat/: gl-icon-flat.ai
assets/icon/fluent/: gl-icon-fluent.ai
assets/icon/stroke/: gl-icon-stroke.ai
cli/: CMakeLists.txt  Makefile  client.c  client.h  main.c  server.c  server.h
common/: CMakeLists.txt  Makefile
common/utils/: bits.c  bits.h  capabilities.c  capabilities.h  filesystem.c  filesystem.h  logging.c  logging.h  threads.c  threads.h  utf16.c  utf16.h
common/win32/: ssize_t.h  stdbool.h  stdshim.h
docs/: compiling_msvc6.md  protocol.md
linux/dbus/: .gitignore  CMakeLists.txt  com.innoveworkshop.Groundlift.xml  generate.sh  main.c
linux/gtk2/: CMakeLists.txt  Makefile  comdlg.c  comdlg.h  main.c  server.c  server.h
linux/gtk2/windows/: recvprogress.c  recvprogress.h  sendfile.c  sendfile.h  sendprogress.c  sendprogress.h  transfer.c  transfer.h
scripts/: README.md  ahavi-list.sh  gen_obex_enum.pl  gen_obex_header_id_enum.pl  wchar-size.sh
src/: CMakeLists.txt  Makefile  avahi.c  avahi.h  defaults.h  glrecvd.c  glsend.c  logging.c  logging.h  main.c  mdnscommon.h  request.c  request.h  sockets.c  sockets.h  tcp.c  tcp.h  tcpserver.c  tcpserver.h  utils.c  utils.h
src/groundlift/: bitutils.h  client.c  client.h  conf.c  conf.h  defaults.h  error.c  error.h  fileutils.c  fileutils.h  obex.c  obex.h  protocol.c  protocol.h  server.c  server.h  sockets.c  sockets.h  tcp.c  tcp.h  utf16utils.c  utf16utils.h
win32/: manifest.xml
win32/common/: DialogWindow.cpp  DialogWindow.h  MsgBoxes.c  MsgBoxes.h  WindowUtilities.c  WindowUtilities.h
win32/cvtutf/: ConvertUTF.c  ConvertUTF.h  Unicode.c  Unicode.h
win32/getopt/: getopt.c  getopt.h
win32/src/: AboutDialog.cpp  AboutDialog.h  Application.cpp  Application.h  CommonIncludes.h  MsgBoxes.h  ProgressDialog.cpp  ProgressDialog.h  ReceiveProgressDialog.cpp  ReceiveProgressDialog.h  RequestPopupDialog.cpp  RequestPopupDialog.h  SendFileDialog.cpp  SendFileDialog.h  SendProgressDialog.cpp  SendProgressDialog.h
win32/src/Controllers/: Client.cpp  Client.h  PeerDiscovery.cpp  PeerDiscovery.h  Server.cpp  Server.h
win32/src/Exceptions/: GroundLift.cpp  GroundLift.h
win32/src/Models/: Peer.cpp  Peer.h
win32/src/sender/: Resource.h  Sender.cpp  Sender.h  Sender.rc  manifest.xml  stdafx.h  targetver.h
win32/src/utilities/: MsgBoxes.cpp  MsgBoxes.h
win32/vs17/: GroundLift.sln
win32/vs17/CLI/: CLI.vcxproj  CLI.vcxproj.filters
win32/vs17/Common/: Common.vcxproj  Common.vcxproj.filters
win32/vs17/Desktop/: WinGL.vcxproj  WinGL.vcxproj.filters
win32/vs17/GroundLift/: GroundLift.vcxproj  GroundLift.vcxproj.filters
win32/vs17/WinCommons/: WinCommons.vcxproj  WinCommons.vcxproj.filters
win32/vs2025/: GroundLift.slnx
win32/vs2025/Client/: Client.vcxproj  Client.vcxproj.filters
win32/vs2025/Sender/: Sender.vcxproj  Sender.vcxproj.filters
win32/vs2025/Server/: Server.vcxproj  Server.vcxproj.filters
win32/vs6/: GroundLift.dsw
win32/vs6/CLI/: CLI.dsp
win32/vs6/Commons/: Commons.dsp
win32/vs6/Desktop/: Desktop.dsp  Desktop.rc  manifest.xml  resource.h
win32/vs6/GroundLift/: GroundLift.dsp
win32/vs6/WinCommons/: WinCommons.dsp
